src/test/ui/rfc-2632-const-trait-impl/feature-gate.gated.stderr
error: const trait impls are not yet implemented
  --> $DIR/feature-gate.rs:9:1
   |
LL | impl const T for S {}
   | ^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

